Dotclear 2.8.1 - 2015-09-23
===========================================================
* Fix admin pager parameters escaping - thanks Keiko Yashiki from JPCERT/CC for reporting this XSS
* Error on changing post author in entries' lists: fixed
* Cope with unknown URL scheme in X-Frame-Options
* One ot two of 🍻 drunk

Dotclear 2.8 - 2015-08-13
===========================================================
* New module dependencies system (plugins)
* Theme editor: Cope with css theme sub-folder
* extension/heritage system applied to mustek templateset
* installation wizard now allows SQLite engine
* Legacy editor toolbar may now be displayed below textarea
* Breadcrumb plugin added to the distribution, included in mustek/currywurst templatesets
* Allow a fifth parameter (optional) for image to insert a legend using figure/figcaption tags (wiki)
* XHTML validator removed from legacy editor
* Update jQuery from 1.11.2 to 1.11.3
* Add a blog parameter to disable internal search
* Add some sort orders and filters criteria for posts and comments
* Update CKEditor from 4.4.8 to 4.5.2
* Add IP and antispam filter columns when displaying spams
* Add actions to directly blacklist IP from comments list
* Lexical sort order for tags and widgets
* Use HTML5 audio tag for MP3 attachments
* Bye the 🐈, welcome the 🐸
* Lot of 🐛 🔫
* Various 🌼 adjustments
* Full of 🍻 drunk

Dotclear 2.7.4 - 2015-02-13
===========================================================
* Berlin theme: resources usage has been optimized
* currywurst templateset: head-linkrel block name fixed
* Current editor syntax: now displayed near edited field (post/page/quick entry)
* Some admin URLs were malformed: fixed
* Post/page preview: anti-clickjacking system fixed
* The cat is valid now

Dotclear 2.7.3 - 2015-01-13
===========================================================
* Restore advanced edition of category description (as in 2.6)
* Various bug fixes
* Some cosmetic adjustments

Dotclear 2.7.2 - 2014-12-25